Add logging to all service classes, refactor hardcoded values, and improve exception handling